projet_gl/src/test/deca/context/valid/0_01/0_01_Identifier_Boolean.deca
// Description:
//    Programme test si l'identifier est bien déclaré pour boolean
//
// Resultats:
//
// Historique:
//    cree le 09/01/2024

{
        boolean a;
        boolean b;
        a = b;
}
