projet_gl/src/test/deca/context/invalid/3_29/3_29_Condition_Int.deca
// Description:
//    Problème de compatibilité de typage pour l'affichage
//
// Resultats:
//    Ligne 11: Condition expected a boolean but returned: int
// 
// Historique:
//    cree le 09/01/2024

{   
   if(5){}; 
}
